fix(css): overflow

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,8 @@
 @layer base {
 	html {
 		font-family: 'Poppins', sans-serif;
-        overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 	}
 	
 	h1 {
